# rdp-session

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml
python/: README.md
python/src/rdp_session/: __init__.py  client.py
python/tests/: test_client.py
scripts/: create_gui_session.ps1  create_gui_session.py
src/: main.rs
tests/: cli_contract.rs
